fixed "new-message" indicator width on mobile
fixes https://trello.com/c/sAk2nAfd

--- a/root/css/layout.css
+++ b/root/css/layout.css
@@ -148,7 +148,7 @@
 }
 
 #new-messages-indicator {
-	width: 300px;
+	width: 250px;
 	margin: 0 auto;
 	position: relative;
 }
